Youtube Iframe video not showing issue fix

--- a/src/app/home/main-contant/main-contant.component.scss
+++ b/src/app/home/main-contant/main-contant.component.scss
@@ -64,6 +64,19 @@
 //   grid-row: 1;
 // }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 100%;
+}
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 600px) {
   .membership-container {
       grid-column-gap: 8px;
